fix cart z-index

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -62,7 +62,7 @@
 
 .cart {
     padding: 1rem 2rem;
-    z-index: 90099999999999999999999999999 !important;
+    z-index: 100000 !important;
     position: absolute;
     display: flex;
     flex-direction: column;
